Readme; Integrationtests + config